--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
 
+    // EncryptedSharedPreferences
+    implementation "androidx.security:security-crypto:1.0.0-alpha02"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.5.0'
