--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.android.app"
-        minSdk 21
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -65,7 +65,7 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:$room_version")
 
     // EncryptedSharedPreferences
-    implementation "androidx.security:security-crypto:1.0.0-alpha02"
+    implementation("androidx.security:security-crypto:1.0.0")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
